# coworking_booking_bot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: push.yml  ycr_push.yml
src/: main.py
src/common/: callback_data.py  middlewares.py
src/common/commands/: command_reservation.py
src/common/message_executors/: abstract_executor.py  password_msg_executor.py
src/common/states/: auth_state.py
src/common/tasks/: __init__.py  abstract_task.py  decorators.py  send_confirm_message_task.py  tasks.py  test_hello_world_task.py
src/common/utils/: messages.py  time.py
src/handlers/: __init__.py  auth_bot_handlers.py
src/handlers/callback_query/: __init__.py  callback_query_handler.py  corfirm_cancel_callback_query.py
src/handlers/messages/: __init__.py  abstract_message_handler.py  auth_message.py  email_message.py  help_message.py  start_command_message.py  user_reservation_message.py
src/handlers/mixins/: __init__.py  help_menu_mixin.py
src/infrastructure/: logger.py  settings.py
src/infrastructure/database/: __init__.py  data_mappers.py  db.py  enum.py  models.py
src/infrastructure/database/client/: abstract_client.py  psql_client.py
src/storage/email_auth_repository/: abstract_email_auth_repository.py  auth_email_data_repository.py
src/storage/reservation_repository/: __init__.py  abstract_reservation_repository.py  reservation_repository.py
src/storage/user_repository/: __init__.py  abstract_user_repository.py  user_repository.py
templates/: email_password.html  one_time_password.html
